# shape-detection

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  opencv
main-project/: CMakeLists.txt  CMakeLists.txt2  README.md  mainFunction  shape-detection  test.sh  test1.txt  test2.txt  testing-kernel-1.txt  testing-kernel-2.txt  testing-kernel-cpu.txt
main-project/image-processing/: CMakeLists.txt
main-project/image-processing/dilation/: CMakeLists.txt
main-project/image-processing/dilation/include/: dilation.hpp
main-project/image-processing/dilation/src/: dilation.cpp
main-project/image-processing/erosion/: CMakeLists.txt
main-project/image-processing/erosion/include/: erosion.hpp
main-project/image-processing/erosion/src/: erosion.cpp
main-project/include/: convenience.hpp
main-project/main/: CMakeLists.txt  hough-transform.cu  hough-transform.hpp  lodepng.cpp  main.cpp
main-project/main/include/: homework-6.hpp  parallel-cv.hpp
main-project/main/src/: homework-6.cpp  main.cpp  parallel-cv.cpp
main-project/main/src/convolution/: convolution.cu  testFile
main-project/src/: CMakeLists.txt  convenience.cpp  convolution.cu  convolutionValidation.cu  helper-functions.cpp  helper-functions.hpp  hough-transform.cu  hough-transform.hpp  interface.cpp  interface.hpp  main.cpp
main-project/src/validationFiles/: conVal  convolutionValidation.cu
project-proposal/: main.tex  refs.bib
project-proposal/high-performance-computing/: ece569.tex  refs.bib
project-proposal/image-analysis/: ece532.tex
project-proposal/itc-paper/: ITC.sty  ItcLatexTemplate.tex  generate.sh  itc-paper.tex  references.bib
project-proposal/itc-paper/figures/: Downsample.eps
project-proposal/telemetry-conference/: 569-paper.tex  ItcLatexTemplate.tex  generate.sh  references.bib
src/: convenience.cpp  convenience.hpp  factorial.cpp  hello.cpp  main.cpp
